# XUQIU-CREATE

./: .gitignore  README.md  _cleanup.py  _cleanup_report.txt  _phase2_run.py  _tap_proxy_verify.py  demo.html  dev_proxy.py  douyin_search_cleaned.json  heybox_search_cleaned.json  start-services.ps1  start.ps1  taptap_search_cleaned.json  tunnel_url.txt
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  contents.py  dashboard.py  demands.py  external_monitors.py  games.py  monitor.py  radar.py  reports.py  search_configs.py
backend/app/data/: demand_keywords.json  kuaibao_launched_tools.json
backend/app/models/: __init__.py  crawl_progress.py  daily_report.py  demand.py  demand_signal.py  external_monitor_cursor.py  external_monitor_record.py  game.py  platform_content.py  platform_search_config.py  radar.py
backend/scripts/: export_demand_keywords.py  import_csv.py
backend/tests/: test_dashboard_summary.py  test_data_adapter_collection.py  test_demand_classification.py  test_demand_keyword_rules.py  test_demand_theme_analysis.py  test_engagement_surge.py  test_external_monitor_sync.py  test_keyword_collection.py  test_keyword_radar.py  test_launched_tool_matcher.py  test_llm_config.py  test_llm_pipeline_recent_contents.py  test_radar_api.py  test_radar_ingest.py  test_radar_models.py  test_radar_service.py  test_report_generator.py  test_scheduler.py  test_signal_evaluation.py  test_tap_proxy_sync.py
监控脚本/: README.md  main.py  pyproject.toml  server.py  taptap_data_clean.py
(+101 files in other folders)
