[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
