[project]
name = "kb-req-research-20260611"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloakbrowser>=0.3.31",
    "fastapi>=0.136.3",
    "gmssl>=3.2.2",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]
